objects/ASI_HK_CRM_SKU_Document__c.object
<CustomObject>
    <fields>
        <fullName>ASI_HK_CRM_FeedItemId__c</fullName>
        <label>FeedItemId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_FileId__c</fullName>
        <label>FileId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_File_Ext__c</fullName>
        <label>File Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_File_Size__c</fullName>
        <label>File Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; ASI_HK_CRM_FileId__c, ASI_HK_CRM_File_Name__c)</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Parent__c</fullName>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>SKU Documents</relationshipLabel>
        <relationshipName>ASI_HK_CRM_SKU_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SKU Document</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>SKU Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SKU Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>